# swing-alert-bot

./: .gitignore  ALPHA_VANTAGE.md  Makefile  PRD.md  README.md  ROADMAP.md  TECHNICAL_DESIGN.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/envs/: dev.tfvars  example.tfvars  prod.tfvars
infra/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
src/common/: __init__.py  alerts.py  alpha_vantage.py  cache.py  indicators.py  rate_limiter.py  signals.py  telegram.py  whitelist.py
src/eod/: __init__.py  handler.py
src/open/: __init__.py  handler.py
src/poller/: __init__.py  handler.py
src/state/: __init__.py  models.py  s3_store.py
tests/: conftest.py
tests/unit/: test_alerts_format.py  test_alpha_vantage_client.py  test_command_poller.py  test_eod_runner.py  test_indicators.py  test_open_runner.py  test_rate_limiter.py  test_s3_store.py  test_signals.py
