[project]
name = "swing-alert-bot"
version = "0.1.0"
description = "Swing trading alert bot for U.S. stocks"
requires-python = ">=3.11"
readme = "PRD.md"
license = {text = "Proprietary"}
authors = [
  { name = "Geoffrey" }
]

dependencies = [
  "httpx>=0.27.0,<0.29",
  "pydantic>=2.7,<3.0",
]

[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]

[tool.uv.pip]
python-version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=4.1,<5.0",
]

# Tell Hatchling which Python packages to ship; using a src/ layout
[tool.hatch.build.targets.wheel]
packages = [
  "src/common",
]
